--- a/.github/workflows/build_and_push_di.yml
+++ b/.github/workflows/build_and_push_di.yml
@@ -24,3 +24,13 @@ jobs:
           context: .
           push: true
           tags: user/app:latest
+
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          # image: repo/image
+          tags: v1, latest
+          registry: docker.io
+          # dockerfile: Dockerfile.ci
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
