--- a/.github/workflows/build_and_push_di.yml
+++ b/.github/workflows/build_and_push_di.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          # image: repo/image
+          image: arthurem/url_shortener_docker
           tags: v1, latest
           registry: docker.io
           # dockerfile: Dockerfile.ci
