--- a/.github/workflows/build_and_push_di.yml
+++ b/.github/workflows/build_and_push_di.yml
@@ -33,4 +33,4 @@ jobs:
           registry: docker.io
           # dockerfile: Dockerfile.ci
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
